Adds initial code